// SPDX-License-Identifier: Apache-2.0
// Copyright Authors of Hubble

syntax = "proto3";

package tetragon;

/**
 * Stack traces
 */

message StackAddress {
	uint64 address = 1;
	string symbol = 2;
}

message StackTrace {
	repeated StackAddress addresses = 1;
}

message StackTraceLabel {
	string key = 1;
	uint64 count = 2;
}

message StackTraceNode {
	StackAddress address = 1;
	uint64 count = 2;
	repeated StackTraceLabel labels = 3;
	repeated StackTraceNode children = 4;
}
